<resources>
    <string name="app_name">dolg</string>
    <string name="enter_button">Войти</string>
    <string name="back">Назад</string>
    <string name="simple_phone">+7 (000) 000 00-00</string>
    <string name="phone_number_placeholder">Номер телефона</string>
    <string name="password_placeholder">Пароль</string>
    <string name="phone_text_debt_screen">Номер для перевода:</string>
    <string name="waiting_pay_text">Я перевел</string>
    <string name="payed">Оплачено</string>
    <string name="summary">Итого</string>
    <string name="app_name_ru">Долги</string>
    <string name="event_create">Создать событие</string>
    <string name="profile">Профиль</string>
    <string name="exit">   Выйти</string>
    <string name="share_button">Поделиться</string>
</resources>