<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main">

    <TextView
        android:id="@+id/enter_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/onest_bold"
        android:text="@string/enter_button"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40sp"
        />

    <TextView
        android:id="@+id/phone_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/onest_bold"
        android:text="@string/phone_number_placeholder"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_text_view"
        android:layout_marginTop="200sp"
        />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:fontFamily="@font/onest_bold"
        android:hint="@string/simple_phone"
        android:inputType="phone"
        android:textColor="@color/main"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/phone_placeholder"
        android:layout_marginTop="5sp"
        android:background="@drawable/rounded_corners_white"
        />

    <TextView
        android:id="@+id/password_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/onest_bold"
        android:text="@string/password_placeholder"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number"
        android:layout_marginTop="20sp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"

        android:fontFamily="@font/onest_bold"
        android:inputType="textPassword"
        android:textColor="@color/main"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/password_placeholder"
        android:layout_marginTop="5sp"
        android:background="@drawable/rounded_corners_white"
        />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:fontFamily="@font/onest_bold"
        android:text="@string/enter_button"
        android:textColor="@color/main"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/back_to_enter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/rounded_corners_white"
        />

    <Button
        android:id="@+id/back_to_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="50sp"
        android:layout_marginLeft="50sp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/onest_bold"
        android:background="@drawable/rounded_corners_main"
        android:layout_marginBottom="30sp"
        />

    <ProgressBar
        android:id="@+id/enter_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/enter_button"
        android:layout_marginBottom="30sp"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>