<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main">

    <View
        android:id="@+id/fill_debt_header"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/return_button"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/back"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/onest_bold"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:background="@color/main"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corners_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="60sp"
        />


    <ImageView
        android:id="@+id/icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10sp"
        />

    <TextView
        android:id="@+id/debt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fill_debt_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/onest_bold"
        android:layout_margin="10sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/debt_items_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/debt_name"
        android:layout_margin="10sp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

<!--    <TextView-->
<!--        android:id="@+id/debt_summary"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="24sp"-->
<!--        android:textColor="@color/black"-->
<!--        android:textStyle="bold"-->
<!--        android:fontFamily="@font/onest_bold"-->
<!--        android:layout_margin="10sp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/debt_items_rv"-->
<!--        />-->

    <TextView
        android:id="@+id/summary_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/debt_items_rv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20sp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/onest_bold"
        android:text="@string/summary"
        />

    <TextView
        android:id="@+id/debt_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        app:layout_constraintTop_toBottomOf="@id/debt_items_rv"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/onest_bold"
        />

    <TextView
        android:id="@+id/phone_text_debt_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/onest_bold"
        android:layout_margin="10sp"
        android:text="@string/phone_text_debt_screen"
        app:layout_constraintTop_toBottomOf="@id/debt_summary"
        />

    <TextView
        android:id="@+id/phone_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/onest_bold"
        android:layout_margin="10sp"
        app:layout_constraintTop_toBottomOf="@id/phone_text_debt_screen"
        />

    <Button
        android:id="@+id/button_pay_waited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/onest_bold"
        android:layout_margin="20sp"
        android:text="@string/waiting_pay_text"
        app:layout_constraintTop_toBottomOf="@id/phone_bank"
        android:background="@drawable/rounded_corners_main"
        />

    <Button
        android:id="@+id/button_pay_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/onest_bold"
        android:layout_margin="20sp"
        android:text="@string/payed"
        app:layout_constraintTop_toBottomOf="@id/phone_bank"
        android:background="@drawable/rounded_corners_green"
        android:visibility="invisible"
        />

    <ProgressBar
        android:id="@+id/debt_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="100sp"
        android:visibility="visible"
        />


</androidx.constraintlayout.widget.ConstraintLayout>