<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main">

    <View
        android:id="@+id/fill_debt_header"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/return_button"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/profile"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/onest_bold"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:background="@color/main"
        />

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/rounded_corners_white"
        android:layout_margin="5sp"
        android:text="@string/share_button"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/onest_bold"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corners_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="60sp"
        />

    <ImageView
        android:id="@+id/image_icon"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        app:layout_constraintTop_toBottomOf="@id/fill_debt_header"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_icon"
        android:textColor="@color/black"
        android:fontFamily="@font/onest_bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_margin="5sp"
        />

    <TextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        android:textColor="@color/gray"
        android:fontFamily="@font/onest_bold"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_margin="5sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/contact"
        android:layout_marginBottom="50sp"
        android:background="@color/black"
        android:layout_marginTop="5sp"
        />
    <TextView
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contact"
        android:text="@string/exit"
        android:textColor="@color/black"
        android:fontFamily="@font/onest_bold"
        android:textSize="20sp"

        android:layout_margin="6sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/exit"
        android:layout_marginBottom="50sp"
        android:background="@color/black"
        android:layout_marginTop="5sp"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="@id/context_menu"
        android:layout_marginBottom="50sp"
        android:background="@color/black"
        />

    <ProgressBar
        android:id="@+id/debt_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="100sp"
        android:visibility="visible"
        />


    <GridLayout
        android:id="@+id/context_menu"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:columnCount="3"
        android:rowCount="2"
        android:layout_gravity="fill_horizontal"
        >
        <ImageView
            android:id="@+id/debt_i"
            android:layout_margin="3sp"
            android:src="@mipmap/debt_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1.5"
            android:layout_gravity="fill"
            />
        <ImageView
            android:layout_margin="3sp"
            android:src="@mipmap/create_debt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1.5"
            android:layout_gravity="fill"
            />
        <ImageView
            android:layout_margin="3sp"
            android:src="@mipmap/profile_icon_active"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1.5"
            android:layout_gravity="fill"
            />

        <Button
            android:id="@+id/debt_t"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:background="@color/white"
            android:text="@string/app_name_ru"
            android:textColor="@color/gray"
            android:fontFamily="@font/onest_bold"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1.5"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:background="@color/white"
            android:text="@string/event_create"
            android:textColor="@color/gray"
            android:fontFamily="@font/onest_bold"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:background="@color/white"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:fontFamily="@font/onest_bold"
            />
    </GridLayout>




</androidx.constraintlayout.widget.ConstraintLayout>